--- a/Front-End/Semana4/Agosto27/package.json
+++ b/Front-End/Semana4/Agosto27/package.json
@@ -11,14 +11,18 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "name": "agosto27",
   "version": "1.0.0",
   "main": "webpack.config.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev" : "webpack-dev-server --open",
+    "build" : "webpack --mode development ",
+    "produccion": "webpack --mode production "
+
   },
   "keywords": [],
   "author": "",
